--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+.continer {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
 nav {
   width: 320px;
   height: 100vh;
@@ -75,9 +80,15 @@ nav {
   text-decoration: none;
   font-family: Poppins;
 }
+.lists a:hover{
+  color: #4DA3FF;
+}
 .nav_list_bottom {
   padding-top: 20px;
   border-top: 1px solid rgb(224, 223, 223);
+}
+.nav_list_bottom li:hover {
+  background-color: #c4c4c45f;
 }
 .nav_list_bottom i{
   color: #707070;
@@ -137,4 +148,77 @@ nav {
 .switch:checked {
   background-color: rgb(0, 0, 0);
   border: 1px solid lightgray;
+}
+main {
+  width: calc(100% - 320px);
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 8px 10px;
+}
+.head {
+  width: 100%;
+  height: 65px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+}
+
+.profile_img img {
+  width: 40px;
+  border-radius: 50%;
+  width: 50px;
+  cursor: pointer;
+}
+.head i {
+  font-size: 35px;
+  cursor: pointer;
+}
+.search {
+  width: 600px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  gap: 10px;
+}
+.search i {
+  color: #707070;
+}
+.search input {
+  width: 100%;
+  height: 40px;
+  border: none;
+  font-size: 16px;
+  padding: 10px;
+}
+.main{
+  margin-top: 50px;
+}
+
+.speed_icons i{
+  font-size: 35px;
+  color: #fff;
+  background-color: blue;
+  border-radius: 5px;
+  width: 50px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.dashboards_descriptions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.dashboards_descriptions h1{
+  font-size: 24px;
+  font-weight: 600;
+  font-family: Poppins;
 }
