--- a/style/style.css
+++ b/style/style.css
@@ -222,3 +222,41 @@ main {
   font-weight: 600;
   font-family: Poppins;
 }
+.dashboard_card {
+  width: calc(100% / 3);
+  height: 190px;
+  background-color: #4DA3FF;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+.dashboard_card i {
+  font-size: 40px;
+}
+.dashboards_cards {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px;
+}
+.dashboards_cards p {
+  font-size: 28px;
+  font-weight: 550;
+  font-family: Popins;
+}
+.dashboards_cards h1 {
+  font-size: 60px;
+  font-weight: 900;
+  font-family: Poppins;
+}
+.dashboard_card:nth-child(2) {
+  background-color: #FFE6AC;
+}
+
+.dashboard_card:nth-child(3) {
+  background-color: #E7D1FC;
+}
