--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@import url(./nav.css);
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
 * {
   margin: 0;
@@ -8,146 +9,6 @@
   width: 100%;
   height: auto;
   display: flex;
-}
-nav {
-  width: 320px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  border-right: 1px solid rgb(224, 223, 223);
-  position: sticky;
-  top: 0;
-  padding: 25px 15px;
-  transition: all 0.5s ease;
-}
-.logos {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-.logos img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.logos h2 {
-  font-size: 28px;
-  font-weight: 600;
-  transition: all 0.5s ease;
-  font-family: Poppins;
-}
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-  width: 7px;
-  background-color: grey;
-  border-radius: 10px;
-}
-.nav_list {
-  display: flex;
-  flex-direction: column;
-  margin-top: 40px;
-  padding: 10px;
-  justify-content: space-between;
-  height: calc(100% - 90px);
-}
-
-.nav_list ul {
-  display: flex;
-  gap: 25px;
-  flex-direction: column;
-  list-style-type: none;
-}
-.nav_list li {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.lists i{
-  color: #707070;
-  font-size: 28px;
-}
-.lists a{
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  color: #707070;
-  gap: 10px;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  font-family: Poppins;
-}
-.lists a:hover{
-  color: #4DA3FF;
-}
-.nav_list_bottom {
-  padding-top: 20px;
-  border-top: 1px solid rgb(224, 223, 223);
-}
-.nav_list_bottom li:hover {
-  background-color: #c4c4c45f;
-}
-.nav_list_bottom i{
-  color: #707070;
-  font-size: 28px;
-}
-.nav_list_bottom ul{
-  display: flex;
-  gap: 25px;
-  flex-direction: column;
-  list-style-type: none;
-}
-.nav_list_bottom li {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.nav_list_bottom a{
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  color: #707070;
-  gap: 10px;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  font-family: Poppins;
-}
-.switch {
-  width: 50px;
-  height: 25px;
-  background-color: #fff;
-  appearance: none;
-  border-radius: 25px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  padding: 0 3px;
-  position: relative;
-  transition: 0.3s linear;
-  color: aliceblue;
-  border: 1px solid black;
-}
-.switch::before {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 20px;
-  background-color: rgb(0, 0, 0);
-  border-radius: 50%;
-  transition: 0.3s linear;
-}
-.switch:checked::before {
-  margin-left: calc(50px - 30px);
-  background-color: rgb(255, 255, 255);
-}
-
-.switch:checked {
-  background-color: rgb(0, 0, 0);
-  border: 1px solid lightgray;
 }
 main {
   width: calc(100% - 320px);
@@ -197,11 +58,11 @@ main {
   font-size: 16px;
   padding: 10px;
 }
-.main{
+.main {
   margin-top: 50px;
 }
 
-.speed_icons i{
+.speed_icons i {
   font-size: 35px;
   color: #fff;
   background-color: blue;
@@ -217,7 +78,7 @@ main {
   align-items: center;
   gap: 10px;
 }
-.dashboards_descriptions h1{
+.dashboards_descriptions h1 {
   font-size: 24px;
   font-weight: 600;
   font-family: Poppins;
@@ -225,13 +86,12 @@ main {
 .dashboard_card {
   width: calc(100% / 3);
   height: 190px;
-  background-color: #4DA3FF;
+  background-color: #4da3ff;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 .dashboard_card i {
   font-size: 40px;
@@ -254,29 +114,29 @@ main {
   font-family: Poppins;
 }
 .dashboard_card:nth-child(2) {
-  background-color: #FFE6AC;
+  background-color: #ffe6ac;
 }
 
 .dashboard_card:nth-child(3) {
-  background-color: #E7D1FC;
+  background-color: #e7d1fc;
 }
 .recents_div {
   display: flex;
   flex-direction: column;
   margin-top: 30px;
 }
-.active{
+.active {
   display: flex;
   align-items: center;
   gap: 10px;
   margin-top: 50px;
 }
-.active h2{
+.active h2 {
   font-size: 24px;
   font-weight: 600;
   font-family: Poppins;
 }
-table{
+table {
   text-align: start;
   padding-top: 30px;
 }
@@ -284,7 +144,7 @@ table{
   width: 30px;
   height: 30px;
   cursor: pointer;
-  background-color: #0E4BF1;
+  background-color: #0e4bf1;
   appearance: none;
   padding-top: 3px;
 }
@@ -304,16 +164,16 @@ table{
 .checkbox:checked::after {
   transform: rotate(-45deg) scale(1);
 }
-th{
+th {
   font-size: 25px;
   font-weight: 500px;
   text-align: start;
   padding-top: 15px;
 }
-tr{
+tr {
   padding-top: 30px;
 }
-td{
+td {
   font-size: 20px;
   font-weight: 400;
   padding-top: 7px;
